--- a/frontend/CarRental/src/app/components/header/header.component.scss
+++ b/frontend/CarRental/src/app/components/header/header.component.scss
@@ -44,3 +44,7 @@ button:hover {
 .nav-button:hover .dropbtn {
   color: var(--primary-color);
 }
+
+.active-link {
+  color: var(--primary-color);
+}
