--- a/frontend/CarRental/src/styles.scss
+++ b/frontend/CarRental/src/styles.scss
@@ -5,7 +5,7 @@
 @import "primeicons/primeicons.css";
 
 body {
-  background-image: url("https://media.discordapp.net/attachments/630044407269163009/1232729197949223043/photo-1492144534655-ae79c964c9d7.png?ex=663c5047&is=663afec7&hm=2434ff40ffce87f5aa7af3aae22f758e1e7b62e0e29684d5c505cad18804927a&=&format=webp&quality=lossless&width=878&height=519");
+  background-image: url("./assets/background.png");
   background-size: cover;
   background-attachment: fixed;
   //background-color: white;
