--- a/frontend/CarRental/src/app/components/header/header.component.scss
+++ b/frontend/CarRental/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 i {
-  font-size: 2.5rem;
+  margin-top: 0.7rem;
 }
 
 .navbar span {
@@ -12,19 +12,20 @@ button {
   padding: 16px;
   border: none;
   font-family: var(--font-family);
-  font-size: 2rem;
+  font-size: 1.25rem;
   padding-top: 0px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.1);
+  font-size: 1.125rem;
+  background-color: rgba(197, 197, 197, 0.171);
 }
 
 .dropdown-content a {
   color: white;
-  padding: 8px 20px;
+  margin: 8px 16px;
   text-decoration: none;
   display: block;
 }
