--- a/frontend/CarRental/src/styles.scss
+++ b/frontend/CarRental/src/styles.scss
@@ -10,3 +10,33 @@ body {
   background-attachment: fixed;
   //background-color: white;
 }
+
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #dfe9eb;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #5e5e5e;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #808080;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #808080;
+}
