--- a/frontend/CarRental/src/app/vehicles/browse-vehicles/browse-vehicles.component.html
+++ b/frontend/CarRental/src/app/vehicles/browse-vehicles/browse-vehicles.component.html
@@ -30,7 +30,11 @@
               class="col-3 flex flex-wrap align-items-center justify-content-center"
             >
               <div class="vertical-align-middle">
-                <p-button label="Edytuj" class="vertical-align-middle" />
+                <p-button
+                  label="Edytuj"
+                  class="vertical-align-middle"
+                  (onClick)="onEditVehicle(vehicle)"
+                />
               </div>
             </div>
           </div>
