--- a/frontend/CarRental/src/app/users/add-user/add-user.component.html
+++ b/frontend/CarRental/src/app/users/add-user/add-user.component.html
@@ -1,7 +1,7 @@
 <div class="min-w-full min-h-full flex justify-content-center flex-wrap mt-8">
   <div class="form-container border-round-3xl">
     <div class="col-12 text-center">
-      <p class="text-4xl font-bold">Dodaj użytkownika</p>
+      <p class="text-4xl font-bold text-primary">Dodaj użytkownika</p>
     </div>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="flex flex-column align-items-center">
