added car brand adding

--- a/frontend/CarRental/src/app/components/header/header.component.html
+++ b/frontend/CarRental/src/app/components/header/header.component.html
@@ -23,6 +23,7 @@
         <div class="dropdown-content">
           <a [routerLink]="['/pojazdy/przegladaj']">Przeglądaj</a>
           <a [routerLink]="['/pojazdy/dodaj']">Dodaj</a>
+          <a [routerLink]="['/pojazdy/modele']">Modele</a>
         </div>
       </div>
       <div class="nav-button">
@@ -30,7 +31,7 @@
           class="dropbtn"
           [routerLink]="['/uzytkownicy']"
           routerLinkActive="active-link"
-          >
+        >
           Użytkownicy
         </button>
         <div class="dropdown-content">
