--- a/frontend/CarRental/src/app/vehicles/add-vehicle/add-vehicle.component.html
+++ b/frontend/CarRental/src/app/vehicles/add-vehicle/add-vehicle.component.html
@@ -12,6 +12,8 @@
                 [options]="brands"
                 placeholder="Marka"
                 formControlName="brand"
+                optionLabel="brandName"
+                (onChange)="getModelsByBrand()"
               />
 
               <p
@@ -48,12 +50,12 @@
                 type="text"
                 pInputText
                 placeholder="Wersja"
-                formControlName="version"
+                formControlName="fuel"
               />
               <p
                 *ngIf="
-                  addCarForm.controls['version'].invalid &&
-                  addCarForm.controls['version'].dirty
+                  addCarForm.controls['fuel'].invalid &&
+                  addCarForm.controls['fuel'].dirty
                 "
                 class="error-message"
               >
@@ -67,13 +69,13 @@
                 class="h-3rem w-20rem"
                 type="text"
                 pInputText
-                formControlName="mileage"
+                formControlName="totalDistance"
                 placeholder="Przebieg"
               />
               <p
                 *ngIf="
-                  addCarForm.controls['mileage'].invalid &&
-                  addCarForm.controls['mileage'].dirty
+                  addCarForm.controls['totalDistance'].invalid &&
+                  addCarForm.controls['totalDistance'].dirty
                 "
                 class="error-message"
               >
