integrating backend employee

--- a/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
+++ b/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
@@ -46,7 +46,7 @@
         </ng-container>
       </ng-container>
       <ng-template #loading>
-        <app-spinner></app-spinner>
+        <app-spinner class="col-12 text-center"></app-spinner>
       </ng-template>
       <ng-template #noData> brak danych </ng-template>
     </div>
