--- a/frontend/CarRental/src/app/components/spinner/spinner.component.scss
+++ b/frontend/CarRental/src/app/components/spinner/spinner.component.scss
@@ -1,7 +1,7 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #3B82F6;
+  border: 5px solid var(--primary-color);
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
