fixed backend requests

--- a/frontend/CarRental/src/app/vehicles/add-vehicle-model/add-vehicle-model.component.html
+++ b/frontend/CarRental/src/app/vehicles/add-vehicle-model/add-vehicle-model.component.html
@@ -26,7 +26,7 @@
             </ng-container>
             <ng-template #versionTemplate>
               <p-dropdown
-                [options]="brands$"
+                [options]="brands"
                 placeholder="Marka"
                 optionLabel="brandName"
                 formControlName="brand"
