--- a/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
+++ b/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
@@ -8,11 +8,15 @@
       </div>
       <div class="col-4">
         <p-iconField iconPosition="right">
-          <p-inputIcon styleClass="pi pi-search" />
+          <p-inputIcon
+            [styleClass]="'pi pi-' + getSearchIconName()"
+            (click)="clearQuery()"
+          />
           <input
             type="text"
             pInputText
             class="mt-4"
+            (input)="onSearch()"
             [(ngModel)]="query"
             placeholder="Wyszukaj..."
           />
